[package]
name = "api_test"
version = "0.1.0"
authors = ["Heitor <heitorvieira.pvd@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
mongodb = { version = "1.0", features = ["sync"], default-features = false }
dotenv = "0.15.0"
rocket_cors = "0.5.2"
chrono = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
bson = "1.1.0"